# agent-forge-local

./: .ejs.db  .gitignore  README.md  config.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: calendar-domain-engineer.md  event-workflow-engineer.md  project-architect.md  qa-test-engineer.md  react-calendar-engineer.md
.github/hooks/: agent-stop.sh  ejs-hooks.json  error-occurred.sh  log-prompt.sh  post-tool-use.sh  pre-tool-use.sh  session-end.sh  session-start.sh  subagent-start.sh  subagent-stop.sh
.github/skills/create-calendar-test-suite/: SKILL.md
.github/skills/ejs-session-init/: SKILL.md
.github/skills/ejs-session-wrapup/: SKILL.md
.github/skills/ejs-sub-agent-capture/: SKILL.md
.github/skills/implement-calendar-view/: SKILL.md
.github/skills/wire-event-workflow/: SKILL.md
.visualizer/: HOOK_INTEGRATION.md  visualizer.config.json
.visualizer/logs/: events.jsonl
calendar-app/: .gitignore  README.md  package-lock.json  package.json
calendar-app/src/: App.tsx  main.tsx
calendar-app/src/components/: CalendarHeader.tsx  ConfirmDialog.tsx  (+5 more)
docs/: PROGRESS.md  team-and-skills.md
docs/adr/: 001-local-multi-agent-orchestration.md  002-ejs-integration-persistent-project-memory.md  003-ejs-write-back-closing-the-feedback-loop.md
docs/prd/: calendar-app-prd.md
examples/: calendar-app-prd.md  hello-world-prd.md
src/agent_forge_local/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py
tests/: __init__.py  test_cli.py  test_clients.py  test_config.py  test_ejs.py  test_models.py  test_orchestrator.py
(+46 files in other folders)
